--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,4 @@
-baseURL = 'http://example.org/'
+baseURL = 'https://manueldemiguel.github.io/ej_hugo/'
 languageCode = 'en-us'
 title = 'My New Hugo Site'
 defaultContentLanguage="es"
