--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "themes/relearn"]
 	path = themes/relearn
 	url = https://github.com/McShelby/hugo-theme-relearn.git
+[submodule "hugo-theme-relearn"]
+	path = hugo-theme-relearn
+	url = https://github.com/McShelby/hugo-theme-relearn.git
